--- a/MarkDown/数据结构/顺序表.md
+++ b/MarkDown/数据结构/顺序表.md
@@ -35,18 +35,19 @@ Vector *init(int n){
 
 ```c
 int insert(Vector *vec, int ind, int val) {
-if (vec == NULL) return 0;
-if (ind < 0 || ind > vec->length) return 0;
-if (vec->length == vec->size) {
-if (!expand(vec)) return 0;
-printf("Expanded successfully! size = %d\n", vec->size);
- }
-for (int i = vec->length; i > ind; --i) {
-vec->data[i] = vec->data[i - 1];
- }
-vec->data[ind] = val;
-vec->length++;
-return 1; }
+	if (vec == NULL) return 0;
+	if (ind < 0 || ind > vec->length) return 0;
+	if (vec->length == vec->size) {
+	if (!expand(vec)) return 0;
+		printf("Expanded successfully! size = %d\n", vec->size);
+ 	}
+	for (int i = vec->length; i > ind; --i) {
+		vec->data[i] = vec->data[i - 1];
+	}
+	vec->data[ind] = val;
+	vec->length++;
+	return 1; 
+}
 ```
 
 ## 删除
@@ -55,13 +56,14 @@ return 1; }
 
 ```c
 int erase(Vector *vec, int ind) {
-if (vec == NULL) return 0;
-if (ind < 0 || ind >= vec->length) return 0;
-for (int i = ind + 1; i < vec->length; ++i) {
-vec->data[i - 1] = vec->data[i];
- }
-vec->length--;
-return 1; }
+	if (vec == NULL) return 0;
+	if (ind < 0 || ind >= vec->length) return 0;
+	for (int i = ind + 1; i < vec->length; ++i) {
+		vec->data[i - 1] = vec->data[i];
+ 	}
+	vec->length--;
+	return 1; 
+}
 ```
 
 ## 扩容
@@ -73,13 +75,13 @@ int expand(Vector *vec) {
 int extra_size = vec->size;
 int *p;
 while (extra_size) {
-p = (int *)realloc(vec->data, sizeof(int) * (vec->size + extra_size));
-if (p) break;
-extra_size /= 2;
- }
-if (p == NULL) return 0;
-vec->data = p;
-vec->size += extra_size;
+	p = (int *)realloc(vec->data, sizeof(int) * (vec->size + extra_size));
+	if (p) break;
+	extra_size /= 2;
+ 	}
+	if (p == NULL) return 0;
+	vec->data = p;
+	vec->size += extra_size;
 return 1; }
 ```
 
