--- a/MarkDown/数据结构/链表.md
+++ b/MarkDown/数据结构/链表.md
@@ -43,12 +43,13 @@ return l;
 
 ```c
 int insert(List *l, int ind, int val) {
-if (l == NULL) return 0;
-if (ind < 0 || ind > l->length) return 0;
-ListNode *p = &(l->head), *node = getNewNode(val);
-while (ind--) p = p->next;
-node->next = p->next; p->next = node; l->length++;
-return 1; }
+	if (l == NULL) return 0;
+	if (ind < 0 || ind > l->length) return 0;
+	ListNode *p = &(l->head), *node = getNewNode(val);
+	while (ind--) p = p->next;
+	node->next = p->next; p->next = node; l->length++;
+	return 1; 
+}
 ```
 
 ## 删除
@@ -57,13 +58,14 @@ return 1; }
 
 ```c
 int erase(List *l, int ind) {
-if (l == NULL) return 0;
-if (ind < 0 || ind >= l->length) return 0;
-ListNode *p = &(l->head), *q;
-while (ind--) p = p->next; q = p->next; p->next = q->next;
-free(q);
-l->length--;
-return 1; }
+	if (l == NULL) return 0;
+	if (ind < 0 || ind >= l->length) return 0;
+	ListNode *p = &(l->head), *q;
+	while (ind--) p = p->next; q = p->next; p->next = q->next;
+	free(q);
+	l->length--;
+	return 1; 
+}
 ```
 
 ## 原地翻转
@@ -72,12 +74,13 @@ return 1; }
 
 ```c
 int reverse(List *l) {
-if (l == NULL) return 0;
-ListNode *p = l->head.next, *q; l->head.next = NULL;
-while (p) {
-q = p->next; p->next = l->head.next; l->head.next = p; p = q;
- }
-return 1; }
+	if (l == NULL) return 0;
+	ListNode *p = l->head.next, *q; l->head.next = NULL;
+	while (p) {
+		q = p->next; p->next = l->head.next; l->head.next = p; p = q;
+ 	}
+	return 1;
+}
 ```
 
 # 双向链表
@@ -90,29 +93,31 @@ return 1; }
 
 ```c
 int insert(List *l, int ind, int val) {
-if (l == NULL) return 0;
-if (ind < 0 || ind > l->length) return 0;
-ListNode *p = &(l->head), *node = getNewNode(val);
-while (ind--) p = p->next;
-node->next = p->next;
-node->pre = p; p->next = node;
-node->next->pre = node; l->length++;
-return 1; }
+	if (l == NULL) return 0;
+	if (ind < 0 || ind > l->length) return 0;
+	ListNode *p = &(l->head), *node = getNewNode(val);
+	while (ind--) p = p->next;
+	node->next = p->next;
+	node->pre = p; p->next = node;
+	node->next->pre = node; l->length++;
+	return 1; 
+}
 ```
 
 ## 删除
 
 ```c
 int erase(List *l, int ind) {
-if (l == NULL) return 0;
-if (ind < 0 || ind >= l->length) return 0;
-ListNode *p = &(l->head), *node;
-while (ind--) p = p->next;
-node = p->next; p->next = node->next;
-node->next->pre = p;
-free(node);
-l->length--;
-return 1; }
+	if (l == NULL) return 0;
+	if (ind < 0 || ind >= l->length) return 0;
+	ListNode *p = &(l->head), *node;
+	while (ind--) p = p->next;
+	node = p->next; p->next = node->next;
+	node->next->pre = p;
+	free(node);
+	l->length--;
+	return 1; 
+}
 ```
 
 # 循环链表
@@ -133,13 +138,14 @@ return 1; }
 
 ```c
 List *getLinkList() {
-List *l = (List *)malloc(sizeof(List));
-l->head.next = &(l->tail);
-l->head.pre = &(l->tail);
-l->tail.pre = &(l->head);
-l->tail.next = &(l->head);
-l->length = 0;
-return l; }
+	List *l = (List *)malloc(sizeof(List));
+	l->head.next = &(l->tail);
+	l->head.pre = &(l->tail);
+	l->tail.pre = &(l->head);
+	l->tail.next = &(l->head);
+	l->length = 0;
+	return l; 
+}
 ```
 
 # 完整代码
